Don't fail-fast in platform-build.yml
Let other builds continue if one fails; this makes it easier to fix a particular build and re-run just that, instead of having to figure out the incomplete parts of a build ran and re-dispatching only those.

--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -87,6 +87,7 @@ jobs:
     if: ${{ needs.formulae-list.outputs.formulae != '[]' && needs.formulae-list.outputs.formulae != '' }}
     runs-on: ${{ endsWith(inputs.stack, '-arm64') && 'pub-hk-ubuntu-24.04-arm-xlarge' || 'pub-hk-ubuntu-24.04-xlarge' }}
     strategy:
+      fail-fast: false
       max-parallel: ${{ fromJSON(inputs.concurrency) }}
       matrix:
         formula: ${{ fromJSON(needs.formulae-list.outputs.formulae) }}
