PHP 8.4 compatibility for Composer platform package installer plugin
We currently perform the install using a bootstrapped minimal 8.3, but it doesn't hurt to be ready.

--- a/support/installer/composer.json
+++ b/support/installer/composer.json
@@ -1,7 +1,7 @@
 {
 	"type": "composer-plugin",
 	"name": "heroku/installer-plugin",
-	"version": "1.7.1",
+	"version": "1.7.2",
 	"autoload": {
 		"psr-4": {
 			"Heroku\\Buildpack\\PHP\\": "src/"
@@ -13,6 +13,7 @@
 		"plugin-modifies-install-path": true
 	},
 	"require": {
-		"composer-plugin-api": "^2.3.0"
+		"composer-plugin-api": "^2.3.0",
+		"php": ">=7.1"
 	}
 }
