Implement repository snapshots
A hash is calculated based on the sorted list of formulae in support/build/. If a formula is renamed or added, the hash changes. During repository upload, mkrepo.sh will create a packages-${hash}.json in addition to packages.json (which still serves as the "bleeding edge" repository, as before).

In bin/compile, the same hash is used to calculate a repository URL.

Together with the previous changes for build metadata variants in package formulae versions, this allows stable repository snapshots, including re-builds of existing published package versions, that are not picked up by published buildpack releases, since they would reference a different snapshot hash in the URL to packages-${hash}.json.

CI now requires platform repo snapshots to be present on the develop bucket/prefix for pull request runs. This still allows manual workflow_dispatch runs without a snapshot, e.g. during development/debugging. Tags and main run against the default repo, as usual, which now uses snapshots. The Prepare Release workflow enforces the presence of a snapshot on the stable bucket/prefix as an additional measure.

GUS-W-18463967

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,17 @@ jobs:
           echo "$VIRTUAL_ENV/bin" >> "$GITHUB_PATH"
       - name: Hatchet setup
         run: bundle exec hatchet ci:setup
-      - name: Export HEROKU_PHP_PLATFORM_REPOSITORIES to …${{env.src_path_suffix}} (since we are not building main or a tag)
-        if: github.ref_type != 'tag' && github.ref_name != 'main'
+      - name: Calculate formulae state Hash
+        run: |
+          echo -n "PLATFORM_REPO_SNAPSHOT_SHA256=" >> "$GITHUB_ENV"
+          support/build/_util/formulae-hash.sh >> "$GITHUB_ENV"
+      - name: Export HEROKU_PHP_PLATFORM_REPOSITORIES to …${{env.src_path_suffix}}packages-${snapshot}.json (since we are not building main or a tag, but it's a PR)
+        if: github.ref_type != 'tag' && github.ref_name != 'main' && github.event_name == 'pull_request'
+        run: |
+          if [[ $STACK != heroku-22 ]]; then STACK="${STACK}-amd64"; fi
+          echo "HEROKU_PHP_PLATFORM_REPOSITORIES=- https://lang-php.s3.us-east-1.amazonaws.com/dist-${STACK}${{env.src_path_suffix}}packages-${PLATFORM_REPO_SNAPSHOT_SHA256}.json" >> "$GITHUB_ENV"
+      - name: Export HEROKU_PHP_PLATFORM_REPOSITORIES to …${{env.src_path_suffix}} (since we are not building main or a tag, and it's not a PR, so no snapshot)
+        if: github.ref_type != 'tag' && github.ref_name != 'main' && github.event_name != 'pull_request'
         run: |
           if [[ $STACK != heroku-22 ]]; then STACK="${STACK}-amd64"; fi
           echo "HEROKU_PHP_PLATFORM_REPOSITORIES=- https://lang-php.s3.us-east-1.amazonaws.com/dist-${STACK}${{env.src_path_suffix}}" >> "$GITHUB_ENV"
