--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,6 @@ env:
   HATCHET_BUILDPACK_BRANCH: ${{ github.head_ref || github.ref_name }}
   HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   HEROKU_API_USER: ${{ secrets.HEROKU_API_USER }}
-  S5CMD_VERSION: 2.2.2
-  S5CMD_HASH: "392c385320cd5ffa435759a95af77c215553d967e4b1c0fffe52e4f14c29cf85  s5cmd_2.2.2_linux_amd64.deb"
 
 jobs:
   integration-test:
@@ -50,16 +48,13 @@ jobs:
         with:
           php-version: "8.3"
           tools: "composer:2.8"
-      - name: Install packages from requirements.txt, plus s5cmd (for some tests)
+      - name: Install packages from requirements.txt (for some tests in platform_spec.rb that run mkrepo.sh which needs natsort)
         run: |
           export VIRTUAL_ENV=$HOME/.venv
           python3 -m venv "$VIRTUAL_ENV"
           export PATH=$VIRTUAL_ENV/bin:$PATH
           pip install -r requirements.txt
-          curl -sSLO https://github.com/peak/s5cmd/releases/download/v${S5CMD_VERSION}/s5cmd_${S5CMD_VERSION}_linux_amd64.deb
-          echo "$S5CMD_HASH" | shasum -c -
-          dpkg -x "s5cmd_${S5CMD_VERSION}_linux_amd64.deb" .
-          echo "$HOME/usr/bin:$VIRTUAL_ENV/bin" >> "$GITHUB_PATH"
+          echo "$VIRTUAL_ENV/bin" >> "$GITHUB_PATH"
       - name: Hatchet setup
         run: bundle exec hatchet ci:setup
       - name: Export HEROKU_PHP_PLATFORM_REPOSITORIES to …${{env.src_path_suffix}} (since we are not building main or a tag)
