Ignore support/util/ for Buildpack Registry export
Just internal release tooling in there.

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -8,6 +8,7 @@ name = "PHP"
 		".rspec_parallel",
 		"support/build/_*/",
 		"support/devcenter/",
+		"support/util/",
 		"test/",
 		"Gemfile",
 		"Gemfile.lock",
