Timeouts for Git HTTP transfers
Just in case we get a hanging 'git push' in a test, this would now cause it to time out after 60 seconds, rather than the default of 3600 seconds.

Technically it's "if the speed is below 1000 B/s for longer than 60 s".

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ env:
   HATCHET_BUILDPACK_BRANCH: ${{ github.head_ref || github.ref_name }}
   HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   HEROKU_API_USER: ${{ secrets.HEROKU_API_USER }}
+  GIT_HTTP_LOW_SPEED_LIMIT: 1000
+  GIT_HTTP_LOW_SPEED_TIME: 60
 
 jobs:
   integration-test:
