Fix buildpack.toml exclusion list
Accidentally excluded support/build/_util/formulae-hash.sh, which is used in bin/compile to calculate the repo snapshot hash.

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -6,7 +6,9 @@ name = "PHP"
 		".github/",
 		".gitignore",
 		".rspec_parallel",
-		"support/build/_*/",
+		"support/build/_conf/",
+		"support/build/_docker/",
+		"support/build/_patches/",
 		"support/devcenter/",
 		"support/util/",
 		"test/",
