--- a/support/installer/composer.json
+++ b/support/installer/composer.json
@@ -15,5 +15,10 @@
 	"require": {
 		"composer-plugin-api": "^2.3.0",
 		"php": ">=7.1"
+	},
+	"archive": {
+		"exclude": [
+			"/vendor"
+		]
 	}
 }
