Make web server boot scripts and configs a package for the platform repo
This way, the CNB can install it into the web servers layer without having to pull in the entire buildpack manually.

GUS-W-19848746

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,14 @@
 	"bin": [
 		"bin/heroku-php-apache2",
 		"bin/heroku-php-nginx"
-	]
+	],
+	"archive": {
+		"exclude": [
+			"*",
+			".*",
+			"!/bin/heroku-php-*",
+			"!/bin/util/autotune.php",
+			"!/conf/"
+		]
+	}
 }
