Disable man-db auto-update in GHAs
The dpkg man-db trigger is excessively slow on GHA runners, see e.g.:
- https://github.com/actions/runner-images/issues/10977
- https://github.com/actions/runner/issues/4030

We disable it so it does not fire at the end of an `apt-get install`. This can easily shave a minute or two off the execution time.

GUS-W-19995078

--- a/.github/workflows/platform-sync.yml
+++ b/.github/workflows/platform-sync.yml
@@ -141,6 +141,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+      # The dpkg man-db trigger is excessively slow on GHA runners, see e.g.:
+      # https://github.com/actions/runner-images/issues/10977
+      # https://github.com/actions/runner/issues/4030
+      # We disable it here so it does not fire at the end of the following apt-get install
+      - name: Disable man-db auto-update
+        run: sudo rm -f /var/lib/man-db/auto-update
       - name: Install dos2unix
         run: |
           sudo apt-get update
@@ -270,6 +276,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+      # The dpkg man-db trigger is excessively slow on GHA runners, see e.g.:
+      # https://github.com/actions/runner-images/issues/10977
+      # https://github.com/actions/runner/issues/4030
+      # We disable it here so it does not fire at the end of the following apt-get install
+      - name: Disable man-db auto-update
+        run: sudo rm -f /var/lib/man-db/auto-update
       - name: Install dos2unix
         run: |
           sudo apt-get update
