Fail early on build/sync Docker image cache miss
There was a GitHub outage today that corrupted the cache - the keys are reserved, but no cache exists, so nothing gets restored, but the cache can also not be written.

Unfortunately, it is not possible to have the cache action fail on write failure, or check how much has been written via an output, but we can at least bail out a bit earlier in the cases where we explicitly need the cache to be restored in order to continue.

--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -97,6 +97,7 @@ jobs:
         with:
           key: docker-cache-heroku-php-build-${{inputs.stack}}.${{github.sha}}
           path: /tmp/docker-cache.tar.gz
+          fail-on-cache-miss: true
       - name: Load cached Docker image
         run: docker load -i /tmp/docker-cache.tar.gz
       - name: Build formula without deploying
@@ -123,6 +124,7 @@ jobs:
         with:
           key: docker-cache-heroku-php-build-${{inputs.stack}}.${{github.sha}}
           path: /tmp/docker-cache.tar.gz
+          fail-on-cache-miss: true
       - name: Load cached Docker image
         run: docker load -i /tmp/docker-cache.tar.gz
       - name: Calculate formulae state Hash
